add method create authors
