# server/api/DTOs/Requests/CreateAuthorDto.cs
@@ -1,0 +1,8 @@
+using System.ComponentModel.DataAnnotations;
+
+namespace api.DTOs.Requests;
+
+public record CreateAuthorDto
+{
+    [Required] [MinLength(1)] public string Name { get; set; }
+}
