# server/api/Services/ILibraryService.cs
@@ -11,4 +11,7 @@ public interface ILibraryService
     Task<BookDto> CreateBook(CreateBookDto dto);
     Task<BookDto> UpdateBook(UpdateBookDto dto);
     Task<BookDto> DeleteBook(string id);
+    Task<AuthorDto> CreateAuthor(CreateAuthorDto dto);
+    /*Task<AuthorDto> UpdateAuthor(UpdateAuthorDto dto);
+    Task<AuthorDto> DeleteAuthor(string id);*/
 }
